--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Path Style Blog</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <header>
@@ -26,10 +26,10 @@
         </div>
     </main>
     <footer>
-        <div class="new-message">Kathryn: Swa</div>
         <button class="close-btn">X</button>
         <button class="night-mode-btn">🌙</button>
+        <div class="design-by">Design by gusibi@path-meme</div>
     </footer>
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
