--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
             <div class="search">
                 <input type="text" placeholder="Search...">
             </div>
+            <button class="night-mode-btn">🌙</button>
         </nav>
     </header>
     <main>
@@ -26,8 +27,8 @@
         </div>
     </main>
     <footer>
+        <div class="new-message">Kathryn: Swa</div>
         <button class="close-btn">X</button>
-        <button class="night-mode-btn">🌙</button>
         <div class="design-by">Design by gusibi@path-meme</div>
     </footer>
     <script src="/script.js"></script>
