Redesign homepage with timeline, markdown support, and reactions

--- a/public/index.html
+++ b/public/index.html
@@ -3,34 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Path Style Blog</title>
+    <title>古思乱讲</title>
     <link rel="stylesheet" href="/styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script>
 </head>
 <body>
     <header>
         <nav>
-            <div class="icons">
-                <span>🕒</span>
-                <span>🌍</span>
-                <span>👤</span>
-                <span>❤️</span>
-            </div>
-            <div class="search">
-                <input type="text" placeholder="Search...">
-            </div>
+            <div class="logo">古思乱讲</div>
             <button class="night-mode-btn">🌙</button>
         </nav>
     </header>
+
+    <div class="banner">
+        <img src="/path/to/banner-image.jpg" alt="Banner" class="banner-image">
+        <img src="/path/to/avatar.jpg" alt="Avatar" class="avatar">
+    </div>
+
     <main>
         <div class="timeline">
             <!-- Blog cards will be inserted here -->
         </div>
     </main>
+
     <footer>
-        <div class="new-message">Kathryn: Swa</div>
-        <button class="close-btn">X</button>
+        <div class="site-info">
+            <a href="https://your-site-url.com">本站地址</a>
+            <a href="/rss.xml">RSS</a>
+        </div>
         <div class="design-by">Design by gusibi@path-meme</div>
     </footer>
+
     <script src="/script.js"></script>
 </body>
 </html>
