Update layout and styling as per new requirements

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
     </header>
 
     <div class="banner">
-        <img src="/path/to/banner-image.jpg" alt="Banner" class="banner-image">
-        <img src="/path/to/avatar.jpg" alt="Avatar" class="avatar">
+        <img src="/images/banners/banner1.jpeg" alt="Banner" class="banner-image">
+        <img src="https://avatars.githubusercontent.com/u/1282277?v=4" alt="Avatar" class="avatar">
     </div>
 
     <main>
