--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,12 @@
     <title>古思乱讲</title>
     <link rel="stylesheet" href="/styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script>
+    <script src="https://unpkg.com/navigo"></script>
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">古思乱讲</div>
+            <div class="logo" onclick="router.navigate('/')">古思乱讲</div>
             <button class="night-mode-btn">🌙</button>
         </nav>
     </header>
@@ -20,10 +21,8 @@
         <img src="https://avatars.githubusercontent.com/u/1282277?v=4" alt="Avatar" class="avatar">
     </div>
 
-    <main>
-        <div class="timeline">
-            <!-- Blog cards will be inserted here -->
-        </div>
+    <main id="app">
+        <!-- 动态内容将被插入这里 -->
     </main>
 
     <footer>
@@ -31,7 +30,7 @@
             <a href="https://momo.gusibi.mobi">本站地址</a>
             <a href="/rss.xml">RSS</a>
         </div>
-        <div class="design-by">path-meme@Design by gusibi</div>
+        <div class="design-by">Design by gusibi@path-meme</div>
     </footer>
 
     <script src="/script.js"></script>
