--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>古思乱讲</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script>
     <script src="https://unpkg.com/navigo"></script>
     <script src="https://unpkg.com/navigo@8.11.1/lib/navigo.min.js"></script>
@@ -18,7 +18,7 @@
     </header>
 
     <div class="banner">
-        <img src="./images/banners/banner2.jpeg" alt="Banner" class="banner-image">
+        <img src="/images/banners/banner2.jpeg" alt="Banner" class="banner-image">
         <img src="https://avatars.githubusercontent.com/u/1282277?v=4" alt="Avatar" class="avatar">
     </div>
 
@@ -34,6 +34,6 @@
         <div class="design-by">Design by gusibi@path-meme</div>
     </footer>
 
-    <script src="./script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
