--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>古思乱讲</title>
     <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/github-style-comments.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script>
     <script src="https://unpkg.com/navigo"></script>
     <script src="https://unpkg.com/navigo@8.11.1/lib/navigo.min.js"></script>
