--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo" onclick="router.navigate('/')">古思乱讲</div>
+            <div class="logo" data-navigo">古思乱讲</div>
             <button class="night-mode-btn">🌙</button>
         </nav>
     </header>
