--- a/public-back/index.html
+++ b/public-back/index.html
@@ -29,7 +29,7 @@
 
     <footer>
         <div class="site-info">
-            <a href="https://momo.gusibi.mobi">本站地址</a>
+            <a href="https://momo.gusibi.site">本站地址</a>
             <a href="/rss.xml">RSS</a>
         </div>
         <div class="design-by">Design by gusibi@path-meme</div>
