--- a/example/path-personal/index.html
+++ b/example/path-personal/index.html
@@ -73,7 +73,8 @@
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.10.1",
     "date-fns": "https://aistudiocdn.com/date-fns@^4.1.0",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.556.0",
-    "react-markdown": "https://aistudiocdn.com/react-markdown@^10.1.0"
+    "react-markdown": "https://aistudiocdn.com/react-markdown@^10.1.0",
+    "html2canvas": "https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.esm.js"
   }
 }
 </script>
